2007-06-01  Arno Rehn  <arno@arnorehn.de>

	* Special cased the QApplication constructor call to work correctly

2007-05-31  Arno Rehn  <arno@arnorehn.de>

	* Added a hack in uics for QFrame.Shape and QFrame.Shadow

2007-05-31  Richard Dale  <rdale@foton.es>

	* Regenerated the Qyoto sources from the release version of Qt 4.3

2007-05-29  Richard Dale  <rdale@foton.es>

	* Try Arno's suggestion of 'return (int) (qint64) o->ptr;' in the
	  QyotoHash f'n to make it compile on all architectures.

2007-05-28  Arno Rehn  <arno@arnorehn.de>

	* Updated the code of the first tutorials to be more like C++ ones.

2007-05-28  Richard Dale  <rdale@foton.es>

	* Further simplified the marshalling of primitive reference types. As
	  a pointer the the value on the C# stack is copied to the smoke stack 
	  before the method call, the value after the method call doesn't need
	  to be copied back.
	* Added a marshaller for 'short&' and 'short*' arg types
	* Attempted to add a QyotoHash function that will compile on 64 bit 
	  machines

2007-05-27  Arno Rehn  <arno@arnorehn.de>

	* Removed the redundant stuff for ref arguments again and implemented them
	  based on Richard's proposal, which is much simpler.
	* Added marshallers for qreal (double) and bool references.

2007-05-18  Arno Rehn  <arno@arnorehn.de>

	* Made 'ref' arguments work.

2007-05-15  Richard Dale  <rdale@foton.es>

	* Regenerated the Qyoto sources from the current qt-copy snapshot as 
	  there have been quite a few changes
	* Added a QSsl class with enums, but this should really be a C# namespace
	  as the C++ version is a namespace.

2007-05-14  Richard Dale  <rdale@foton.es>

	* Added code generation for 'ref' argument types

2007-04-26  Richard Dale  <rdale@foton.es>

	* The classes which need to have interfaces, such as QUrl because they
	  are used with multiple inheritance in C++, were always being defined
	  as interface types in method arguments. This isn't needed, so change