@@ -1,0 +1,10 @@
+using System.Reflection;
+using System.Runtime.CompilerServices;
+
+// Version number is the same as the version of the latest Qt version
+// for which the Qyoto runtime has been programmed.
+[assembly: AssemblyVersion("4.3.0.0")]
+
+// Unnecessary, as the keyfile is given to the compiler as a parameter.
+// It may be useful to have it here, though.
+[assembly: AssemblyKeyFile ("key.snk")]
